check env S2EDIR;
Signed-off-by: weizhou-chaojixx <wpz5080@psu.edu>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,10 @@
 # Make sure we include any source files in the target-specific directory
 file(GLOB TARGET_SRC_FILES ${TARGET_DIR}/*.c)
 
+if(NOT DEFINED ENV{S2EDIR})
+    message(FATAL_ERROR "not defined environment variable:S2EDIR")  
+endif()
+
 add_library(cpu cpu-exec.c
                 cpus.c
                 exec.c
